--- a/templates/about.page.html
+++ b/templates/about.page.html
@@ -7,6 +7,15 @@
             <h1>This is a about page</h1>
             <p>This is some text</p>
             <p>This came from the template: {{index .StringMap "test"}}</p>
+
+            <p>
+                {{if ne (index .StringMap "remote_ip") ""}}
+                Your remote IP address is {{index .StringMap "remote_ip"}}
+
+                {{else}}
+                No IP address found, visit the <a href='/'>home page</a> in order to set it.
+                {{end}}
+            </p>
         </div>
     </div>
 </div>
