--- a/templates/search-availability.page.html
+++ b/templates/search-availability.page.html
@@ -8,7 +8,8 @@
         <div class="col-md-8">
             <h1 class="text-center mt-4">Check for Avalibility</h1>
 
-            <form action="book.html" method="GET" novalidate class="needs-validation">
+            <form action="/search-availability" method="POST" novalidate class="needs-validation">
+                <input type='hidden' name='csrf_token' value='{{.CSRFToken}}' />
                 <div class='form-row'>
                     <div class='col'>
                         <div class='form-row' id="reservation-dates">
