--- a/templates/base.layout.html
+++ b/templates/base.layout.html
@@ -200,14 +200,14 @@
                     showCancelButton: true,
                     focusConfirm: false,
                     willOpen: () => {
-                        const elem = document.getElementById('reservation-dates-modal');
-                        const rangePicker = new DateRangePicker(elem, {
-                            showOnFocus: true,
-                        })
+                        if (c.willOpen !== undefined) {
+                            c.willOpen()
+                        }
                     },
                     didOpen: () => {
-                        document.getElementById('start').removeAttribute('disabled')
-                        document.getElementById('end').removeAttribute('disabled')
+                        if (c.didOpen !== undefined) {
+                            c.didOpen()
+                        }
                     },
                     preConfirm: () => {
                         return [
@@ -217,7 +217,17 @@
                     }
                 });
                 if (formValues) {
-                    Swal.fire(JSON.stringify(formValues));
+                    if (formValues.dismiss !== Swal.DismissReason.cancel) {
+                        if (formValues.value !== "") {
+                            if (c.callback !== undefined) {
+                                c.callback(formValues)
+                            } else {
+                                c.callback(false)
+                            }
+                        }
+                    } else {
+                        c.callback(false)
+                    }
                 }
             }
 
