--- a/templates/generals.page.html
+++ b/templates/generals.page.html
@@ -31,7 +31,6 @@
 
 {{define "js"}}
 <script>
-
     document.getElementById('check-availability-button').addEventListener("click", function () {
 
         let html =
@@ -53,7 +52,31 @@
         // notifyModal("Title", "Hello world", "success", "BttonText")d
         attention.custom({
             msg: html,
-            title: "Choose your Dates"
+            title: "Choose your Dates",
+            willOpen: () => {
+                const elem = document.getElementById('reservation-dates-modal');
+                const rangePicker = new DateRangePicker(elem, {
+                    showOnFocus: true,
+                })
+            },
+            didOpen: () => {
+                document.getElementById('start').removeAttribute('disabled')
+                document.getElementById('end').removeAttribute('disabled')
+            },
+            callback: function (result) {
+                let form = document.getElementById("check-availability-form")
+                let formData = new FormData(form)
+                formData.append("csrf_token", "{{.CSRFToken}}")
+
+                fetch('/search-availability-json', {
+                    method: 'POST',
+                    body: formData
+                }).then(response => response.json()).then(data => {
+                    console.log("===test data", data)
+                })
+            }
+
+
         })
     })
 </script>
