--- a/templates/make-reservation.page.html
+++ b/templates/make-reservation.page.html
@@ -1,6 +1,4 @@
-{{template "base" .}}
-
-{{define "content"}}
+{{template "base" .}} {{define "content"}}
 
 <div class="container">
     <div class="row">
@@ -8,29 +6,56 @@
         <div class="col-md-8">
             <h1 class="text-center mt-4">Make Resevation</h1>
 
-            <form action="" method="POST" class="need-validation" novalidate>
+            {{$res := index .Data "reservation"}}
+
+            <form action="" method="POST" novalidate>
+                <input type="hidden" name="csrf_token" value="{{.CSRFToken}}" />
                 <div class="form-group mt-5">
                     <label for="first_name">First Name:</label>
-                    <input type="text" name="first_name" id="first_name" class="form-control" required
-                        autocomplete="off">
+                    {{with .Form.Errors.Get "first_name"}}
+                    <label class="text-danger">{{.}}</label>
+
+                    {{end}}
+
+                    {{ $err := .Form.Errors.Get "first_name" }}
+                    <input type="text" name="first_name" id="first_name"
+                        class="form-control{{if $err}} is-invalid{{end}}" value="{{$res.FirstName}}" required
+                        autocomplete="off" />
                 </div>
 
                 <div class="form-group mt-5">
                     <label for="last_name">Last Name:</label>
-                    <input type="text" name="last_name" id="last_name" class="form-control" required autocomplete="off">
+                    {{with .Form.Errors.Get "last_name"}}
+                    <label class="text-danger">{{.}}</label>
+
+                    {{end}}
+                    <input type="text" name="last_name" id="last_name" class="form-control" value="{{$res.LastName}}"
+                        required autocomplete="off" />
                 </div>
 
                 <div class="form-group mt-5">
-                    <label for="phone_number">Phone Number: </label>
-                    <input type="text" name="phone_number" id="phone_number" class="form-control" required
-                        autocomplete="off">
-                </div>
 
-                <div class="form-group mt-5">
                     <label for="email">Email:</label>
-                    <input type="email" name="email" id="email" class="form-control" required autocomplete="off">
+                    {{with .Form.Errors.Get "email"}}
+                    <label class="text-danger">{{.}}</label>
+
+                    {{end}}
+                    <input type="email" name="email" id="email" class="form-control" value="{{$res.Email}}" required
+                        autocomplete="off" />
                 </div>
-                <hr>
+
+                <div class="form-group mt-5">
+                    {{with .Form.Errors.Get "phone"}}
+                    <label class="text-danger">{{.}}</label>
+
+                    {{end}}
+                    <label for="phone_number">Phone Number: </label>
+                    <input type="text" name="phone_number" id="phone_number" class="form-control" value="{{$res.Phone}}"
+                        required autocomplete="off" />
+                </div>
+
+
+                <hr />
                 <button type="submit" class="btn btn-primary">Make Reservation</button>
             </form>
         </div>
