--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -136,6 +136,18 @@
             })
         }
 
+        {{with .Error}}
+        notify("{{.}}", "error");
+        {{end}}
+
+        {{with .Flash}}
+        notify("{{.}}", "success");
+        {{end}}
+
+         {{with .Flash}}
+        notify("{{.}}", "warning");
+        {{end}}
+
         function Prompt() {
             let toast = function (c) {
                 const {
