--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -10,7 +10,7 @@
 
             <form action="" method="POST" novalidate>
                 <input type="hidden" name="csrf_token" value="{{.CSRFToken}}" />
-                <div class="form-group mt-5">
+                <div class="form-group">
                     <label for="first_name">First Name:</label>
                     {{with .Form.Errors.Get "first_name"}}
                     <label class="text-danger">{{.}}</label>
@@ -23,7 +23,7 @@
                         autocomplete="off" />
                 </div>
 
-                <div class="form-group mt-5">
+                <div class="form-group">
                     <label for="last_name">Last Name:</label>
                     {{with .Form.Errors.Get "last_name"}}
                     <label class="text-danger">{{.}}</label>
@@ -33,7 +33,19 @@
                         required autocomplete="off" />
                 </div>
 
-                <div class="form-group mt-5">
+                <div class="form-group">
+                    <label for="start_date">Start Date:</label>
+                    <input type="text" name="start_date" id="start_date" class="form-control" />
+                </div>
+
+                <div class="form-group">
+                    <label for="end_date">End Date:</label>
+                    <input type="text" name="end_date" id="end_date" class="form-control" />
+                </div>
+
+                <input type="hidden" name="room_id" value="1" />
+
+                <div class="form-group">
 
                     <label for="email">Email:</label>
                     {{with .Form.Errors.Get "email"}}
@@ -44,7 +56,7 @@
                         autocomplete="off" />
                 </div>
 
-                <div class="form-group mt-5">
+                <div class="form-group">
                     {{with .Form.Errors.Get "phone"}}
                     <label class="text-danger">{{.}}</label>
 
