--- a/templates/make-reservation.page.tmpl
+++ b/templates/make-reservation.page.tmpl
@@ -1,77 +1,106 @@
 {{template "base" .}} {{define "content"}}
 
 <div class="container">
-    <div class="row">
-        <div class="col-md-2"></div>
-        <div class="col-md-8">
-            <h1 class="text-center mt-4">Make Resevation</h1>
+  <div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      <h1 class="text-center mt-4">Make Resevation</h1>
 
-            {{$res := index .Data "reservation"}}
+      {{$res := index .Data "reservation"}}
 
-            <form action="" method="POST" novalidate>
-                <input type="hidden" name="csrf_token" value="{{.CSRFToken}}" />
-                <div class="form-group">
-                    <label for="first_name">First Name:</label>
-                    {{with .Form.Errors.Get "first_name"}}
-                    <label class="text-danger">{{.}}</label>
+      <p><strong>Reservation Details</strong></p>
+      <p>Room: {{ $res.Room.Name }}</p>
+      <p>Arrival: {{index .StringMap "start_date"}}</p>
+      <p>Departure: {{index .StringMap "end_date"}}</p>
 
-                    {{end}}
-
-                    {{ $err := .Form.Errors.Get "first_name" }}
-                    <input type="text" name="first_name" id="first_name"
-                        class="form-control{{if $err}} is-invalid{{end}}" value="{{$res.FirstName}}" required
-                        autocomplete="off" />
-                </div>
-
-                <div class="form-group">
-                    <label for="last_name">Last Name:</label>
-                    {{with .Form.Errors.Get "last_name"}}
-                    <label class="text-danger">{{.}}</label>
-
-                    {{end}}
-                    <input type="text" name="last_name" id="last_name" class="form-control" value="{{$res.LastName}}"
-                        required autocomplete="off" />
-                </div>
-
-                <div class="form-group">
-                    <label for="start_date">Start Date:</label>
-                    <input type="text" name="start_date" id="start_date" class="form-control" />
-                </div>
-
-                <div class="form-group">
-                    <label for="end_date">End Date:</label>
-                    <input type="text" name="end_date" id="end_date" class="form-control" />
-                </div>
-
-                <input type="hidden" name="room_id" value="1" />
-
-                <div class="form-group">
-
-                    <label for="email">Email:</label>
-                    {{with .Form.Errors.Get "email"}}
-                    <label class="text-danger">{{.}}</label>
-
-                    {{end}}
-                    <input type="email" name="email" id="email" class="form-control" value="{{$res.Email}}" required
-                        autocomplete="off" />
-                </div>
-
-                <div class="form-group">
-                    {{with .Form.Errors.Get "phone"}}
-                    <label class="text-danger">{{.}}</label>
-
-                    {{end}}
-                    <label for="phone_number">Phone Number: </label>
-                    <input type="text" name="phone_number" id="phone_number" class="form-control" value="{{$res.Phone}}"
-                        required autocomplete="off" />
-                </div>
+      <form action="" method="POST" novalidate>
+        <input type="hidden" name="csrf_token" value="{{.CSRFToken}}" />
+        <input type="hidden" name="start_date" value="{{index .StringMap "start_date"
 
 
-                <hr />
-                <button type="submit" class="btn btn-primary">Make Reservation</button>
-            </form>
+
+        }}" /> <input type="hidden" name="end_date" value="{{index .StringMap "end_date"
+
+
+
+        }}" />
+        <input type="hidden" name="room_id" value="{{ $res.RoomID }}" />
+
+        <div class="form-group">
+          <label for="first_name">First Name:</label>
+          {{with .Form.Errors.Get "first_name"}}
+          <label class="text-danger">{{.}}</label>
+
+          {{ end }}
+
+          {{ $err := .Form.Errors.Get "first_name" }}
+          <input
+            type="text"
+            name="first_name"
+            id="first_name"
+            class="form-control{{if $err}} is-invalid{{ end }}"
+            value="{{ $res.FirstName }}"
+            required
+            autocomplete="off"
+          />
         </div>
+
+        <div class="form-group">
+          <label for="last_name">Last Name:</label>
+          {{with .Form.Errors.Get "last_name"}}
+          <label class="text-danger">{{.}}</label>
+
+          {{ end }}
+          <input
+            type="text"
+            name="last_name"
+            id="last_name"
+            class="form-control"
+            value="{{ $res.LastName }}"
+            required
+            autocomplete="off"
+          />
+        </div>
+
+        <div class="form-group">
+          <label for="email">Email:</label>
+          {{with .Form.Errors.Get "email"}}
+          <label class="text-danger">{{.}}</label>
+
+          {{ end }}
+          <input
+            type="email"
+            name="email"
+            id="email"
+            class="form-control"
+            value="{{ $res.Email }}"
+            required
+            autocomplete="off"
+          />
+        </div>
+
+        <div class="form-group">
+          {{with .Form.Errors.Get "phone"}}
+          <label class="text-danger">{{.}}</label>
+
+          {{ end }}
+          <label for="phone_number">Phone Number: </label>
+          <input
+            type="text"
+            name="phone_number"
+            id="phone_number"
+            class="form-control"
+            value="{{ $res.Phone }}"
+            required
+            autocomplete="off"
+          />
+        </div>
+
+        <hr />
+        <button type="submit" class="btn btn-primary">Make Reservation</button>
+      </form>
     </div>
+  </div>
 </div>
 
-{{end}}
+{{ end }}
