--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -1,259 +1,184 @@
 {{define "base"}}
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <title>Title</title>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
     <!-- vanilla js date picker -->
-    <link rel="stylesheet"
-        href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker-bs4.min.css">
-    <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
-    <link rel="stylesheet" href="/static/css/styles.css" type="text/css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/css/datepicker-bs4.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://unpkg.com/notie/dist/notie.min.css"
+    />
+    <link rel="stylesheet" href="/static/css/styles.css" type="text/css" />
 
     <style>
-        .datepicker {
-            z-index: 10000;
-        }
+      .datepicker {
+        z-index: 10000;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/about">About</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Rooms
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="/generals-quarters">General's Quartes</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="/majors-suite">Major's Suite</a>
-                    </div>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/search-availability">Book Now</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/contact">Contact</a>
-                </li>
-            </ul>
-        </div>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about">About</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Rooms
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/generals-quarters"
+                >General's Quartes</a
+              >
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="/majors-suite">Major's Suite</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/search-availability">Book Now</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/contact">Contact</a>
+          </li>
+        </ul>
+      </div>
     </nav>
     {{block "content" .}}
 
-    {{end}}
+    {{ end }}
 
-    <div class='row my-footer'>
-        <div class='col'>
-            Left
-        </div>
-        <div class='col'>
-            Middle
-        </div>
-        <div class='col'>
-            Right
-        </div>
+    <div class="row my-footer">
+      <div class="col">Left</div>
+      <div class="col">Middle</div>
+      <div class="col">Right</div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
 
     <script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/js/datepicker-full.min.js"></script>
     <script src="https://unpkg.com/notie"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="/static/js/app.js"></script>
     <!-- <script src="static/js/main.js"></script> -->
 
     {{block "js" .}}
-    {{end}}
+    {{ end }}
 
     <script>
-        // Example starter JavaScript for disabling form submissions if there are invalid fields
-        (function () {
-            'use strict'
+      // Example starter JavaScript for disabling form submissions if there are invalid fields
+      (function () {
+          'use strict'
 
-            // Fetch all the forms we want to apply custom Bootstrap validation styles to
-            var forms = document.querySelectorAll('.needs-validation')
+          // Fetch all the forms we want to apply custom Bootstrap validation styles to
+          var forms = document.querySelectorAll('.needs-validation')
 
-            // Loop over them and prevent submission
-            Array.prototype.slice.call(forms)
-                .forEach(function (form) {
-                    form.addEventListener('submit', function (event) {
-                        if (!form.checkValidity()) {
-                            event.preventDefault()
-                            event.stopPropagation()
-                        }
+          // Loop over them and prevent submission
+          Array.prototype.slice.call(forms)
+              .forEach(function (form) {
+                  form.addEventListener('submit', function (event) {
+                      if (!form.checkValidity()) {
+                          event.preventDefault()
+                          event.stopPropagation()
+                      }
 
-                        form.classList.add('was-validated')
-                    }, false)
-                })
-        })()
-
-
-        let attention = Prompt()
-
-        function notify(msg, type) {
-            notie.alert({
-                type: type, // optional, default = 4, enum: [1, 2, 3, 4, 5, 'success', 'warning', 'error', 'info', 'neutral']
-                text: msg,
-            })
-        }
-
-        function notifyModal(title, text, icon, confirmButtonText) {
-            Swal.fire({
-                title,
-                text,
-                icon,
-                confirmButtonText
-            })
-        }
-
-        {{with .Error}}
-        notify("{{.}}", "error");
-        {{end}}
-
-        {{with .Flash}}
-        notify("{{.}}", "success");
-        {{end}}
-
-         {{with .Flash}}
-        notify("{{.}}", "warning");
-        {{end}}
-
-        function Prompt() {
-            let toast = function (c) {
-                const {
-                    msg = '',
-                    icon = "success",
-                    position = "top-end"
-                } = c;
-
-                const Toast = Swal.mixin({
-                    toast: true,
-                    title: msg,
-                    position,
-                    icon,
-                    showConfirmButton: false,
-                    timer: 3000,
-                    timerProgressBar: true,
-                    didOpen: (toast) => {
-                        toast.onmouseenter = Swal.stopTimer;
-                        toast.onmouseleave = Swal.resumeTimer;
-                    }
-                });
-                Toast.fire({});
-            }
-
-            let sucess = function (c) {
-                const {
-                    msg = "",
-                    title = "",
-                    footer = ""
-                } = c;
-
-                Swal.fire({
-                    icon: "success",
-                    title,
-                    text: msg,
-                    footer
-                });
-            }
-            let error = function (c) {
-                const {
-                    msg = "",
-                    title = "",
-                    footer = ""
-                } = c;
-
-                Swal.fire({
-                    icon: "error",
-                    title,
-                    text: msg,
-                    footer
-                });
-            }
-
-            async function custom(c) {
-                const { msg = '', title = '' } = c;
-
-                const { value: formValues } = await Swal.fire({
-                    title,
-                    html: msg,
-                    backrop: false,
-                    focusConfirm: false,
-                    showCancelButton: true,
-                    focusConfirm: false,
-                    willOpen: () => {
-                        if (c.willOpen !== undefined) {
-                            c.willOpen()
-                        }
-                    },
-                    didOpen: () => {
-                        if (c.didOpen !== undefined) {
-                            c.didOpen()
-                        }
-                    },
-                    preConfirm: () => {
-                        return [
-                            document.getElementById("start").value,
-                            document.getElementById("end").value
-                        ];
-                    }
-                });
-                if (formValues) {
-                    if (formValues.dismiss !== Swal.DismissReason.cancel) {
-                        if (formValues.value !== "") {
-                            if (c.callback !== undefined) {
-                                c.callback(formValues)
-                            } else {
-                                c.callback(false)
-                            }
-                        }
-                    } else {
-                        c.callback(false)
-                    }
-                }
-            }
-
-            return {
-                toast,
-                sucess,
-                error,
-                custom,
-            }
-        }
+                      form.classList.add('was-validated')
+                  }, false)
+              })
+      })()
 
 
+      let attention = Prompt()
+
+      function notify(msg, type) {
+          notie.alert({
+              type: type, // optional, default = 4, enum: [1, 2, 3, 4, 5, 'success', 'warning', 'error', 'info', 'neutral']
+              text: msg,
+          })
+      }
+
+      function notifyModal(title, text, icon, confirmButtonText) {
+          Swal.fire({
+              title,
+              text,
+              icon,
+              confirmButtonText
+          })
+      }
+
+      {{with .Error}}
+      notify("{{.}}", "error");
+      {{end}}
+
+      {{with .Flash}}
+      notify("{{.}}", "success");
+      {{end}}
+
+       {{with .Flash}}
+      notify("{{.}}", "warning");
+      {{end}}
     </script>
-</body>
-
+  </body>
 </html>
-{{end}}
+{{ end }}
