--- a/templates/base.layout.tmpl
+++ b/templates/base.layout.tmpl
@@ -88,7 +88,23 @@
             <a class="nav-link" href="/contact">Contact</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/user/login">Login</a>
+            {{if eq .IsAuthenticated 1}}
+            <a
+              class="nav-link"
+              tabindex="-1"
+              aria-disabled="true"
+              href="/user/logout"
+              >Logout</a
+            >
+            {{else}}
+            <a
+              class="nav-link"
+              tabindex="-1"
+              aria-disabled="true"
+              href="/user/login"
+              >Login</a
+            >
+            {{ end }}
           </li>
         </ul>
       </div>
