--- a/templates/admin-all-reservations.page.tmpl
+++ b/templates/admin-all-reservations.page.tmpl
@@ -1,8 +1,56 @@
 {{template "admin" .}}
+
+{{define "css"}}
+<link href="https://cdn.jsdelivr.net/npm/simple-datatables@latest/dist/style.css" rel="stylesheet" type="text/css">
+{{end}}
+
 {{define "page-title"}}
 All Reservations
 {{ end }}
 
 {{define "content"}}
-<div class="col-md-12">All Reservations Content</div>
+<div class="col-md-12">
+  {{$res := index .Data "reservations"}}
+
+  <table class='table table-striped table-hover table-bordered' id='all-res'>
+    <thead>
+        <tr>
+            <th>ID</th>
+            <th>Last Name</th>
+            <th>Room</th>
+            <th>Arrival</th>
+            <th>Departrue</th>
+        </tr>
+        </thead>
+        <tbody>
+        {{range $res}}
+        <tr>
+            <td>{{.ID}}</td>
+            <td>
+              <a href='/admin/reservations/all/{{.ID}}'>{{.LastName}}</a>
+            
+            </td>
+            <td>{{.Room.Name}}</td>
+            <td>{{formatDate .StartDate}}</td>
+            <td>{{formatDate .EndDate}}</td>
+        </tr>
+        {{ end }}
+        </tbody>
+    </thead>
+  </table>
+
+
+</div>
 {{ end }}
+
+{{define "js"}}
+<script src="https://cdn.jsdelivr.net/npm/simple-datatables@latest" type="text/javascript"></script>
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+     const dataTable = new simpleDatatables.DataTable("#all-res", {
+   select: 3, sort: "desc"
+});
+ 
+})
+</script>
+{{end}}
