--- a/templates/admin-reservations-show.page.tmpl
+++ b/templates/admin-reservations-show.page.tmpl
@@ -4,5 +4,83 @@ Reservation
 {{ end }}
 
 {{define "content"}}
-<div class="col-md-12">Show Reservation.</div>
+{{$res := index .Data "reservation"}}
+{{$src := index .StringMap "src"}}
+<div class="col-md-12">
+  <p><strong>Arrival</strong>: {{formatDate $res.StartDate }}</p>
+  <p><strong>Departure</strong>: {{formatDate $res.EndDate }}</p>
+  <p><strong>Room</strong>: {{ $res.Room.Name }}</p>
+
+  <form
+    action="/admin/reservations/{{ $src }}/{{ $res.ID }}"
+    method="POST"
+    novalidate
+  >
+    <input type="hidden" name="csrf_token" value="{{.CSRFToken}}" />
+
+    <div class="form-group">
+      <label for="first_name">First Name:</label>
+      {{with .Form.Errors.Get "first_name"}}
+      <label class="text-danger">{{.}}</label>
+
+      {{ end }}
+
+      {{ $err := .Form.Errors.Get "first_name" }}
+      <input type="text" name="first_name" id="first_name" class="form-control
+      {{ with .Form.Errors.Get "first_name" }} is-invalid{{ end }}" value="{{
+        $res.FirstName
+      }}" required autocomplete="off" />
+    </div>
+
+    <div class="form-group">
+      <label for="last_name">Last Name:</label>
+      {{with .Form.Errors.Get "last_name"}}
+      <label class="text-danger">{{.}}</label>
+
+      {{ end }}
+      <input type="text" name="last_name" id="last_name" class="form-control
+      {{ with .Form.Errors.Get "last_name" }} is-invalid{{ end }}" value="{{
+        $res.LastName
+      }}" required autocomplete="off" />
+    </div>
+
+    <div class="form-group">
+      <label for="email">Email:</label>
+      {{with .Form.Errors.Get "email"}}
+      <label class="text-danger">{{.}}</label>
+
+      {{ end }}
+      <input
+        type="email"
+        name="email"
+        id="email"
+        class="form-control"
+        value="{{ $res.Email }}"
+        required
+        autocomplete="off"
+      />
+    </div>
+
+    <div class="form-group">
+      {{with .Form.Errors.Get "phone"}}
+      <label class="text-danger">{{.}}</label>
+
+      {{ end }}
+      <label for="phone_number">Phone Number: </label>
+      <input
+        type="text"
+        name="phone_number"
+        id="phone_number"
+        class="form-control"
+        value="{{ $res.Phone }}"
+        required
+        autocomplete="off"
+      />
+    </div>
+
+    <hr />
+    <button type="submit" class="btn btn-primary">Save</button>
+    <a href="/admin/reservations-{{ $src }}" class="btn btn-warning">Cancel</a>
+  </form>
+</div>
 {{ end }}
