mark reservations as processed

--- a/templates/admin.layout.tmpl
+++ b/templates/admin.layout.tmpl
@@ -175,7 +175,7 @@
     <script src="/static/js/app.js"></script>
     <script src="/static/admin/js/dashboard.js"></script>
     <!-- End custom js for this page-->
-    <!-- 
+
     <script>
       let attention = Prompt();
 
@@ -206,7 +206,7 @@
       {{with .Warning}}
       notify("{{.}}", "warning")
       {{end}}
-    </script> -->
+    </script>
 
     {{block "js" . }}
 
