--- a/templates/admin-reservations-show.page.tmpl
+++ b/templates/admin-reservations-show.page.tmpl
@@ -79,11 +79,21 @@ Reservation
     </div>
 
     <hr />
-    <button type="submit" class="btn btn-primary">Save</button>
-    <a href="/admin/reservations-{{ $src }}" class="btn btn-warning">Cancel</a>
-    <a href="#!" class="btn btn-info" onclick="processRes({{ $res.ID }})"
-      >Mark as Processed</a
-    >
+    <div class="d-flex">
+      <button type="submit" class="btn btn-primary me-3">Save</button>
+      <a href="/admin/reservations-{{ $src }}" class="btn btn-warning me-3"
+        >Cancel</a
+      >
+      <a href="#!" class="btn btn-info me-3" onclick="processRes({{ $res.ID }})"
+        >Mark as Processed</a
+      >
+      <a
+        href="#!"
+        class="btn btn-danger ms-auto"
+        onclick="deleteRes({{ $res.ID }})"
+        >Delete</a
+      >
+    </div>
   </form>
 </div>
 {{ end }}
@@ -98,6 +108,18 @@ Reservation
       callback: function (result) {
         if (result != false) {
           window.location.href = '/admin/process-reservation/{{$src}}/' + id;
+        }
+      },
+    });
+  }
+
+  function deleteRes(id) {
+    attention.custom({
+      icon: 'warning',
+      msg: 'Are you sure you want to delete this reservation?',
+      callback: function (result) {
+        if (result != false) {
+          window.location.href = '/admin/delete-reservation/{{$src}}/' + id;
         }
       },
     });
