configure calendar to display dates

--- a/templates/admin-all-reservations.page.tmpl
+++ b/templates/admin-all-reservations.page.tmpl
@@ -31,8 +31,8 @@ All Reservations
             
             </td>
             <td>{{.Room.Name}}</td>
-            <td>{{formatDate .StartDate}}</td>
-            <td>{{formatDate .EndDate}}</td>
+            <td>{{formatAsMMDDYYYY .StartDate}}</td>
+            <td>{{formatAsMMDDYYYY .EndDate}}</td>
         </tr>
         {{ end }}
         </tbody>
