--- a/templates/admin-reservations-calendar.page.tmpl
+++ b/templates/admin-reservations-calendar.page.tmpl
@@ -4,10 +4,17 @@ Reservation Calendar
 {{ end }}
 
 {{define "content"}}
+{{$now := index .Data "now"}}
+{{$rooms := index .Data "rooms"}}
+{{$daysInMonth := index .IntMap "days_in_month"}}
+
+
+
+
 <div class="col-md-12">
   <div class="text-center">
     <h3>
-      {{index .StringMap "this_month"}} {{index .StringMap "this_month_year"}}
+      {{formatDate $now "January"}} {{formatDate $now "2006"}}
     </h3>
    
   </div>
@@ -20,5 +27,30 @@ Reservation Calendar
     href="/admin/reservations-calendar?y={{index .StringMap "next_month_year"}}&m={{index .StringMap "next_month"}}">&gt;&gt;</a>
 </div>
 <div class="clearfix"></div>
+
+{{range $rooms}}
+{{$roomID := .ID}}
+<h4 class='mt-4'>{{.Name}}</h4>
+
+<div class='table-responsive'>
+  <table class='table table-bordered table-striped table-sm'>
+   <tr class='table-dard'>
+    {{range $index := iterate $daysInMonth}}
+      <td class='text-center'>{{add $index 1}}</td>
+    {{end}}
+   </tr>
+   <tr>
+    {{range $index := iterate $daysInMonth}}
+    <td  class='text-center'>
+      <input type="checkbox" />
+    </td>
+   
+  {{end}}
+   </tr>
+
+  </table>
+</div>
+
+{{end}}
 </div>
 {{ end }}
