add get restrictions for room by date in calendar

--- a/templates/admin-reservations-calendar.page.tmpl
+++ b/templates/admin-reservations-calendar.page.tmpl
@@ -7,7 +7,8 @@ Reservation Calendar
 {{$now := index .Data "now"}}
 {{$rooms := index .Data "rooms"}}
 {{$daysInMonth := index .IntMap "days_in_month"}}
-
+{{$currentMonth := index .StringMap "this_month"}}
+{{$currentYear := index .StringMap "this_month_year"}}
 
 
 
