--- a/server/templates/admin-reservations-calendar.page.tmpl
+++ b/server/templates/admin-reservations-calendar.page.tmpl
@@ -46,6 +46,11 @@ Reservation Calendar
    <tr>
     {{range $index := iterate $daysInMonth}}
     <td  class='text-center'>
+      {{if gt (index $reservations (printf "%s-%s-%d" $currentYear $currentMonth (add $index 1))) 0}}
+      <a href="/admin/reservations/cal/{{index $reservations (printf "%s-%s-%d" $currentYear $currentMonth (add $index 1))}}">
+        <span class='text-danger'>R</span>
+      </a>
+      {{else}}
       <input
       
       {{if gt (index $blocks (printf "%s-%s-%d" $currentYear $currentMonth (add $index 1))) 0}}
@@ -57,6 +62,7 @@ Reservation Calendar
       name ="add_block_{{$roomID}}_{{printf "%s-%s-%d" $currentYear $currentMonth (add $index 1)}}"
       {{end}}
       type="checkbox" />
+      {{end}}
     </td>
    
   {{end}}
