--- a/server/templates/admin-reservations-show.page.tmpl
+++ b/server/templates/admin-reservations-show.page.tmpl
@@ -81,9 +81,16 @@ Reservation
     <hr />
     <div class="d-flex">
       <button type="submit" class="btn btn-primary me-3">Save</button>
+
+      {{if eq $src "cal"}}
+      <a href="#!" onclick="window.history.go(-1)" class="btn btn-warning me-3"
+        >Cancel</a
+      >
+      {{else }}
       <a href="/admin/reservations-{{ $src }}" class="btn btn-warning me-3"
         >Cancel</a
       >
+      {{ end }}
       <a href="#!" class="btn btn-info me-3" onclick="processRes({{ $res.ID }})"
         >Mark as Processed</a
       >
